plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco' // JaCoCo 플러그인 추가
}

group = 'com.hbhw'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jacoco {
	toolVersion = '0.8.7'  // 원하는 JaCoCo 버전
}

test {
	useJUnitPlatform()  // JUnit 5를 사용하는 경우
	finalizedBy jacocoTestReport // 테스트 실행 후 리포트 생성
}

jacocoTestReport {
	dependsOn test  // 테스트 완료 후 리포트 생성
	reports {
		xml {
			enabled true  // XML 리포트 활성화
		}
		html {
			enabled true  // HTML 리포트 활성화
		}
		csv {
			enabled false  // CSV 리포트 비활성화
		}
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
	implementation group: 'org.openpnp', name: 'opencv', version: '4.9.0-0'
	implementation group: 'org.json', name: 'json', version: '20250107'
	implementation group: 'commons-io', name: 'commons-io', version: '2.18.0'
	implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.4'
	implementation 'com.google.zxing:core:3.5.3'
	implementation 'com.google.zxing:javase:3.5.3'
	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.4.3'
	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
	testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.30.17'
	testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
